--- a/pizza/css/style.css
+++ b/pizza/css/style.css
@@ -10,7 +10,12 @@ h1 {
   background-color: #004fef;
   padding: 20px;
 }
-
+#banner {
+  width: 100%;
+  height: 20%;
+  background-image: url("http://www.themesltd.com/headers2/alternating_pizza_slices.png");;
+  padding: 180px 0;
+}
 h2 {
   text-align: center;
   font-family: 'Montserrat', sans-serif;
