--- a/pizza/css/indexStyle.css
+++ b/pizza/css/indexStyle.css
@@ -18,8 +18,14 @@ h1 {
   padding: 20px;
 }
 
+div.zaShopLocations {
+  display: block;
+  border-style: solid;
+  border: 10px;
+}
+
 h2 {
-  text-align: center;
+  text-align: center;;
   font-family: 'Montserrat', sans-serif;
   font-size: 2em;
   font-style: oblique;
