--- a/pizza/css/indexStyle.css
+++ b/pizza/css/indexStyle.css
@@ -1,65 +1,65 @@
+/* ===========================
+  Base Element Styles
+============================= */
 
-html {
-  background-color: #FFFEFF;
+body {
+  line-height: 1.6;
+  color: #3a3a3a;
 }
 
-#banner {
-  width: 100%;
-  height: 20%;
-  background-image: url("http://thumbs.dreamstime.com/x/pizza-seamless-hand-drawn-doodle-pattern-vector-illustration-backgrounds-card-posters-banners-textile-prints-cover-web-design-57720797.jpg");
-  padding: 180px 0;
-}
 h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
-  background-color: #980704;
-  padding: 20px;
+  margin-top: 0;
 }
 
-div.zaShopLocations {
-  display: block;
-  border-style: solid;
-  border: 10px;
-}
-
-h2 {
-  text-align: center;;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 2em;
-  font-style: oblique;
-}
-
-nav a {
-  font-family: 'Montserrat', sans-serif;
-  display: block;
-  text-align: center;
-  font-size: 1.5em;
+a {
+  color: #fff;
   text-decoration: none;
 }
 
-p {
-  font-family: 'Montserrat', sans-serif;
+/* ===========================
+  Base Layout Styles
+============================= */
+
+* {
+  box-sizing: border-box;
 }
 
-img {
-  display: flex;
-  padding: 20px;
-  margin: 0 auto;
+/* ------- Navigation ------- */
+
+.name {
+  margin: 0;
 }
-h3 {
-  text-decoration: underline;
+
+/* --- Layout Containers --- */
+
+.container {
+  padding-left: 1em;
+  padding-right: 1em;
 }
-h3, h4 {
-  font-family: 'Montserrat', sans-serif;
+
+.main-header {
+  background: #3acec2;
+}
+
+.main-footer {
   text-align: center;
-  display: block;
-  margin: 0 auto;
-  padding: 10px;
+  padding: 2em 0;
+  background: #d9e4ea;
 }
 
-/*table styles*/
+/*table styles--> hide on Index*/
 table {
   display: none;
+}
+
+/* ===========================
+  Media Queries
+============================= */
+
+@media (min-width: 769px) {
+  .container {
+      width: 70%;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
 }
