--- a/pizza/css/style.css
+++ b/pizza/css/style.css
@@ -1,91 +1,82 @@
+/* ===========================
+  Base Element Styles
+============================= */
 
-html {
-  background-color: #fdfef0;
+body {
+  line-height: 1.6;
+  color: #3a3a3a;
 }
+
 h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
-  background-color: #004fef;
-  padding: 20px;
-}
-#banner {
-  width: 100%;
-  height: 20%;
-  background-image: url("http://www.themesltd.com/headers2/alternating_pizza_slices.png");;
-  padding: 180px 0;
-}
-h2 {
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 2em;
-  font-style: oblique;
+  margin-top: 0;
 }
 
-nav a {
-  font-family: 'Montserrat', sans-serif;
-  display: block;
-  text-align: center;
-  font-size: 1.5em;
+a {
+  color: #fff;
   text-decoration: none;
 }
 
-p {
-  font-family: 'Montserrat', sans-serif;
+/* ===========================
+  Base Layout Styles
+============================= */
+
+* {
+  box-sizing: border-box;
 }
 
-img {
-  display: flex;
-  padding: 20px;
-  margin: 0 auto;
+/* ------- Navigation ------- */
+
+.name {
+  margin: 0;
 }
-h3 {
-  text-decoration: underline;
+
+/* --- Layout Containers --- */
+
+.container {
+  padding-left: 1em;
+  padding-right: 1em;
 }
-h3, h4 {
-  font-family: 'Montserrat', sans-serif;
+
+.main-header {
+  background: #3acec2;
+}
+
+.main-footer {
   text-align: center;
-  display: block;
-  margin: 0 auto;
-  padding: 10px;
+  padding: 2em 0;
+  background: #d9e4ea;
 }
 
 
 /*table styles*/
 table {
-  width: 80%;
-  border-collapse: collapse;
-  border: none;
+  width: 70%;
+  /*border-collapse: collapse;*/
   text-align: center;
   margin: 0 auto;
+  padding: 7px 10px 10px 10px;
 }
 th {
-  border-top: none;
-  font-size: 1em;
   font-weight: 500;
   font-family: 'Montserrat', sans-serif;
 }
 
 td {
   font-family: 'Montserrat', sans-serif;
-  font-size: 1em;
 }
 
 tr:nth-child(even) {
   background: #ccc;
   }
 
-.tableHead {
-  padding: 7px 10px 10px 10px;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  font-size: 90%;
-  border-bottom: 2px solid #111;
-  border-top: 1px solid #111;
-  text-align: left;
-}
+  /* ===========================
+    Media Queries
+  ============================= */
 
-.tableRow {
-  padding: 7px 10px 10px 10px;
-}
+  @media (min-width: 769px) {
+    .container {
+        width: 70%;
+        max-width: 1000px;
+        margin: 0 auto;
+      }
+  }
