--- a/pizza/css/style.css
+++ b/pizza/css/style.css
@@ -3,19 +3,36 @@
 ============================= */
 
 body {
+  font-family: 'Nunito', sans-serif;
   line-height: 1.6;
   color: #3a3a3a;
+  background-color: #999;
+}
+
+p {
+	font-size: .95em;
+	margin-bottom: 1.5em;
 }
 
 h1 {
   margin-top: 0;
+  color: #fff;
+}
+
+h2,
+h3,
+a {
+	color: #fff;
+}
+
+h2,
+h3 {
+	margin-top: 0;
 }
 
 a {
-  color: #fff;
-  text-decoration: none;
+	text-decoration: underline;;
 }
-
 /* ===========================
   Base Layout Styles
 ============================= */
@@ -26,8 +43,14 @@ a {
 
 /* ------- Navigation ------- */
 
-.name {
+.main-nav {
   margin: 0;
+  padding-top: 20px;
+  color: #fff;
+}
+
+.main-nav {
+
 }
 
 /* --- Layout Containers --- */
@@ -35,16 +58,20 @@ a {
 .container {
   padding-left: 1em;
   padding-right: 1em;
+  text-align: center;
+
 }
 
 .main-header {
-  background: #3acec2;
+  background: #4C4C4C;
+  text-align: center;
+  color: #fff;
 }
 
 .main-footer {
   text-align: center;
   padding: 2em 0;
-  background: #d9e4ea;
+  background: #CCCCCC;
 }
 
 
@@ -58,11 +85,14 @@ table {
 }
 th {
   font-weight: 500;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Varela Round', sans-serif;
+  line-height: 1.6;
+  font-size: 1.4em;
 }
 
 td {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Varela Round', sans-serif;
+  line-height: 1.6;
 }
 
 tr:nth-child(even) {
@@ -73,10 +103,20 @@ tr:nth-child(even) {
     Media Queries
   ============================= */
 
+  .wrap {
+    min-height: calc(100vh - 89px);
+}
+
   @media (min-width: 769px) {
     .container {
         width: 70%;
         max-width: 1000px;
         margin: 0 auto;
+
       }
+
+      /*.name,
+      .main-nav {
+        display: flex;
+      }*/
   }
