adding sales-data link to footer of index.html page for ease of click through

--- a/pizza/css/indexStyle.css
+++ b/pizza/css/indexStyle.css
@@ -62,7 +62,13 @@ h6 {
 }
 
 a {
-	text-decoration: none;
+	text-decoration: underline;;
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+  padding: 100;
+
+
 }
 
 /* ===========================
